# Controllers/InternalUsersController.cs
@@ -90,10 +90,13 @@ namespace InternalPortal.Controllers
             }
 
             _context.Entry(internalUser).State = EntityState.Modified;
-            foreach (var ur in internalUser.InternalUserRoles)
-            {
-                _context.InternalUserRole.Add(ur);
+            if (internalUser.InternalUserRoles != null) {
+                foreach (var ur in internalUser.InternalUserRoles)
+                {
+                    _context.InternalUserRole.Add(ur);
+                }
             }
+           
             try
             {
                 await _context.SaveChangesAsync();
